<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discovery">

    <fragment
        android:id="@+id/navigation_discovery"
        android:name="com.example.proyecto.ui.discovery.DiscoveryFragment"
        android:label="@string/title_discovery"
        tools:layout="@layout/fragment_discovery">
        <action
            android:id="@+id/action_discovery_to_book_info"
            app:destination="@id/navigation_book_info" />
        <action
            android:id="@+id/action_discovery_to_profile_owner"
            app:destination="@id/navigation_profile_owner" />
    </fragment>

    <fragment
        android:id="@+id/navigation_book_info"
        android:name="com.example.proyecto.ui.discovery.BookInfoFragment"
        android:label="Book Info"
        tools:layout="@layout/fragment_book_info">
        <argument android:name="bookTitle"    app:argType="string" android:defaultValue="" />
        <argument android:name="bookAuthor"   app:argType="string" android:defaultValue="" />
        <argument android:name="bookYear"     app:argType="string" android:defaultValue="" />
        <argument android:name="bookPages"    app:argType="string" android:defaultValue="" />
        <argument android:name="bookLanguage" app:argType="string" android:defaultValue="" />
        <argument android:name="ownerName"    app:argType="string" android:defaultValue="" />
        <action
            android:id="@+id/action_book_info_to_profile_owner"
            app:destination="@id/navigation_profile_owner" />
        <action
            android:id="@+id/action_book_info_to_chat"
            app:destination="@id/navigation_chat" />
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.proyecto.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community">
        <action
            android:id="@+id/action_community_to_profile_owner"
            app:destination="@id/navigation_profile_owner" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.proyecto.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.proyecto.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages">
        <action
            android:id="@+id/action_messages_to_chat"
            app:destination="@id/navigation_chat" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.proyecto.ui.profile.ProfileUserFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_add"
            app:destination="@id/navigation_add" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_owner"
        android:name="com.example.proyecto.ui.profile.ProfileFragment"
        android:label="Owner Profile"
        tools:layout="@layout/fragment_profile_user">
        <argument android:name="ownerName"   app:argType="string" android:defaultValue="" />
        <action
            android:id="@+id/action_profile_owner_to_chat"
            app:destination="@id/navigation_chat" />
        <action
            android:id="@+id/action_profile_owner_to_book_info"
            app:destination="@id/navigation_book_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.proyecto.ui.messages.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat">
        <argument android:name="ownerName"       app:argType="string"  android:defaultValue="" />
        <argument android:name="defaultMessage"  app:argType="string"  android:defaultValue="" />
        <argument android:name="conversationId"  app:argType="integer" android:defaultValue="-1" />
        <action
            android:id="@+id/action_chat_to_shared"
            app:destination="@id/navigation_shared" />
        <action
            android:id="@+id/action_chat_to_return"
            app:destination="@id/navigation_return" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.example.proyecto.ui.profile.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/navigation_shared"
        android:name="com.example.proyecto.ui.messages.SharedFragment"
        android:label="Confirm Handoff"
        tools:layout="@layout/fragment_shared" />

    <fragment
        android:id="@+id/navigation_return"
        android:name="com.example.proyecto.ui.messages.ReturnFragment"
        android:label="Confirm Return"
        tools:layout="@layout/fragment_return" />
</navigation>